--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/renansdias/fab-main-server",
   "dependencies": {
     "express": "^4.12.3",
+    "send-marked-html": "0.0.1",
     "socket.io": "^1.3.5"
   }
 }
