--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "homepage": "https://github.com/renansdias/fab-main-server",
   "dependencies": {
     "brackets": "^0.5.7",
+    "domhandler": "git://github.com/simonfan/domhandler.git",
+    "domutils": "^1.5.1",
     "express": "^4.12.3",
-    "lodash": "^3.6.0",
+    "htmlparser2": "^3.8.2",
+    "lodash": "^3.7.0",
     "send-marked-html": "git://github.com/simonfan/send-marked-html.git",
     "socket.io": "^1.3.5"
   }
