--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "htmlparser2": "^3.8.2",
     "lodash": "^3.7.0",
     "send-marked-html": "git://github.com/simonfan/send-marked-html.git",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "watch": "^0.16.0"
   }
 }
