--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/renansdias/fab-main-server",
   "dependencies": {
     "brackets": "^0.5.7",
+    "commander": "^2.8.0",
     "deployd": "^0.8.0",
     "domhandler": "git://github.com/simonfan/domhandler.git",
     "domutils": "^1.5.1",
