--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "send-marked-html": "git://github.com/simonfan/send-marked-html.git",
     "socket.io": "^1.3.5",
     "watch": "^0.16.0"
+  },
+  "bin": {
+    "start": "bin/start.js"
   }
 }
