--- a/_sub-applications/brackets/package.json
+++ b/_sub-applications/brackets/package.json
@@ -23,14 +23,15 @@
     "brackets-server": "./bin/run.js"
   },
   "dependencies": {
-    "send": "^0.9.3",
-    "mkdirp": "^0.5.0",
-    "rimraf": "^2.2.8",
-    "ncp": "^1.0.0",
     "commander": "^2.3.0",
+    "glob": "^4.0.6",
+    "mkdirp": "^0.5.0",
+    "ncp": "^1.0.0",
     "open": "^0.0.5",
+    "rimraf": "^2.2.8",
+    "send": "^0.9.3",
     "socket.io": "^1.1.0",
-    "glob": "^4.0.6"
+    "watch": "^0.16.0"
   },
   "devDependencies": {
     "mocha": "*",
