--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "brackets": "^0.5.7",
     "commander": "^2.8.0",
     "deployd": "^0.8.0",
-    "domhandler": "git://github.com/simonfan/domhandler.git",
+    "domhandler": "^2.3.0",
     "domutils": "^1.5.1",
     "express": "^4.12.3",
     "htmlparser2": "^3.8.2",
     "lodash": "^3.7.0",
-    "send-marked-html": "git://github.com/simonfan/send-marked-html.git",
+    "send-marked-html": "git://github.com/fabricadeaplicativos/send-marked-html.git",
     "socket.io": "^1.3.5",
     "watch": "^0.16.0"
   },
