--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "build/install"
+    "postinstall": "build/install",
+    "start": "node bin/start.js web"
   },
   "repository": {
     "type": "git",
