installed esprima packages

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "domhandler": "^2.3.0",
     "domutils": "^1.5.1",
     "dpd-proxy": "git://github.com/fabricadeaplicativos/dpd-proxy.git",
+    "escodegen": "^1.6.1",
+    "esprima": "^2.2.0",
+    "estraverse": "^4.1.0",
     "express": "^4.12.3",
     "htmlparser2": "^3.8.2",
     "lodash": "^3.7.0",
