--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "brackets": "^0.5.7",
     "commander": "^2.8.0",
     "deployd": "^0.8.0",
-    "dom-fs": "git://github.com/fabricadeaplicativos/dom-fs.git",
+    "dom-fs": "git://github.com/fabricadeaplicativos/dom-fs.git#develop",
     "domhandler": "^2.3.0",
     "domutils": "^1.5.1",
     "dpd-proxy": "git://github.com/fabricadeaplicativos/dpd-proxy.git",
